# TestSubscrtiptionBug

./: .gitignore  README.md
client/: package.json
client/src/: App.js  index.js
server/: Cargo.toml
server/src/: main.rs
