[package]
name = "server"
version = "0.1.0"
authors = ["reza-ebrahimi <reza.ebrahimi.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.4.0", features = ["full"] }
#actix = "0.10.0"
#actix-web = "3"
#async-graphql = "2.5.0"
#async-graphql-actix-web = "2.5.0"

async-graphql =  { git = "https://github.com/async-graphql/async-graphql", branch = "actix-web-v4-beta" }
async-graphql-actix-web =  { git = "https://github.com/async-graphql/async-graphql", branch = "actix-web-v4-beta" }

actix = "0.11.1"
actix-web = "4.0.0-beta.5"